2008-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tmm.el (tmm-completion-delete-prompt): Don't hardcode point-min==1.
	(tmm-add-prompt): Make sure completion-setup-hook is preserved even in
	case of an error in display-completion-list.

	* filecache.el (file-cache-completions-keymap): Move init from
	file-cache-completion-setup-function into declaration.
	(file-cache-minibuffer-complete): Simplify.
	(file-cache-completion-setup-function): Use standard-output,
	preserve current-buffer.

	* vc.el (vc-status-update): Fix typo.
	(vc-status-update): Set needs-update.
	(vc-status-refresh): η-reduce.

2008-04-14  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-mode-map): Bind C-a to image-bol and C-e
	to image-eol.

2008-04-14  Alexandre Julliard  <julliard@winehq.org>

	* vc.el (vc-status-update): Undo the previous revert.

2008-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Those completions
	are never valid w.r.t test-completion.
	(completion--file-name-table):
	Check completion-all-completions-with-base-size.

2008-04-14  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-dvipdf-program): New variable.
	(doc-view-dvipdfm-program): Mention doc-view-dvipdf-program.
	(doc-view-mode-p): Check for doc-view-dvipdf-program as
	alternative for doc-view-dvipdfm-program.
	(doc-view-dvi->pdf): Prefer dvipdf over dvipdfm.

	* doc-view.el (doc-view-start-process): Don't set
	default-directory to "~/" if the current value is valid.
	This broke PS files that run other files in the same directory.

2008-04-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-status-kill-query): New function.
	(vc-status-mode): Add it to kill-buffer-query-functions.
	(vc-status-show-fileentry): New function.
	(vc-status-menu-map): Bind it.  Bind vc-next-action.

2008-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-message): Put cursor at the right place.
